add_executable          (regular-decomposer-short regular-decomposer-short.cpp)
add_executable          (regular-decomposer-long  regular-decomposer-long.cpp)
add_executable          (test-decomposition       test-decomposition.cpp)
add_executable          (test-direct-master       test-direct-master.cpp)
target_link_libraries   (test-direct-master       ${libraries})
